--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	color: #1b263b;
-	background: #e8e9eb;
 }
 
 div.container {
@@ -43,6 +42,8 @@ input#input {
 	width: 250px;
 	height: 25px;
 	font-size: 20px;
+	border: 2px solid #9b2226;
+	border-radius: 8px;
 }
 
 .btn {
@@ -51,6 +52,7 @@ input#input {
 	font-size: 16px;
 	border: none;
 	color: #e0e1dd;
+	border-radius: 8px;
 }
 
 .btn.add {
