--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,15 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	color: #1b263b;
+	background: #344e41;
 }
 
 div.container {
 	display: flex;
 	flex-direction: column;
 	align-items: space-between;
+	gap: 8px;
 	min-width: 350px;
-	gap: 10px;
 }
 
 .title {
@@ -26,6 +27,7 @@ div.container {
   	font-weight: 400;
   	font-style: normal;
   	align-self: center;
+  	color: #dad7cd;
 }
 
 .filter,
@@ -33,6 +35,8 @@ div.container {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	max-width: 350px;
+	gap: 8px
 }
 
 .filter {
@@ -41,24 +45,21 @@ div.container {
 
 input#input,
 input#filter {
-	width: 225px;
-	height: 25px;
-	font-size: 20px;
-	border: 2px solid #9b2226;
+	font-size: 16px;
+	border: 2px solid #000;
 	border-radius: 8px;
-}
-
-input#filter {
-	width: 310px;
+	padding: 8px;
+	flex: 1;
+	background: #a3b18a;
 }
 
 .btn {
-	width: 80px;
-	height: 30px;
+	min-width: 40px;
 	font-size: 16px;
-	border: none;
 	color: #e0e1dd;
 	border-radius: 8px;
+	padding: 8px;
+	border: 2px solid #000;
 }
 
 .btn.add {
@@ -66,23 +67,26 @@ input#filter {
 }
 
 .btn.delete {
-	background: #9b2226;
+	background: #bc4749;
 }
 
 .btn.filterOpen,
 .btn.filterClose {
 	width: 25px;
-	background: #f4f4f4;
+	background: #588157;
 }
 
 .list li {
-	min-width: 350px;
+	max-width: 350px;
 	list-style-type: none;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	font-size: 20px;
 	margin-bottom: 10px;
+	background: #a3b18a;
+	padding: 8px;
+	border-radius: 8px;
 }
 
 div.footer {
