--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 * {
 	margin: 0;
 	padding: 0;
+  	font-weight: 500;
+  	font-style: normal;
+	font-family: "Barlow Condensed", sans-serif;
 }
 
 body {
-	font-family: "Roboto", sans-serif;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -23,12 +25,11 @@ div.container {
 }
 
 .title {
-	font-family: "Anta", sans-serif;
-  	font-weight: 400;
-  	font-style: normal;
   	align-self: center;
   	color: #dad7cd;
   	margin-top: 16px;
+	font-family: "Bebas Neue", sans-serif;
+
 }
 
 .filter,
@@ -51,7 +52,8 @@ input#filter {
 	border-radius: 8px;
 	padding: 8px;
 	flex: 1;
-	background: #a3b18a;
+	background: #cad2c5;
+	border: 1px solid #cad2c5;
 }
 
 .btn {
@@ -60,21 +62,25 @@ input#filter {
 	color: #e0e1dd;
 	border-radius: 8px;
 	padding: 8px;
-	border: none;
+	border: 1px solid #cad2c5;
+	background: inherit;
 }
 
-.btn.add {
+/*.btn.add {
 	background: #4f772d;
-}
+}*/
 
 .btn.delete {
 	background: #bc4749;
+	border: none;
+	font-family: "Bebas Neue", sans-serif;
+
 }
 
 .btn.filterOpen,
 .btn.filterClose {
 	width: 25px;
-	background: #588157;
+/*	background: #588157;*/
 }
 
 .list li {
@@ -85,7 +91,7 @@ input#filter {
 	align-items: center;
 	font-size: 20px;
 	margin-bottom: 10px;
-	background: #a3b18a;
+	background: #cad2c5;
 	padding: 8px;
 	border-radius: 8px;
 }
@@ -97,7 +103,7 @@ div.footer {
 	align-items: center;
 	justify-content: center;
 	color: #344e41;
-	background: #a3b18a;
+	background: #cad2c5;
 }
 
 div.footer a {
