--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ body {
 div.container {
 	display: flex;
 	flex-direction: column;
-	align-items: space-between;
 	gap: 8px;
 	max-width: 350px;
 }
@@ -58,6 +57,7 @@ div.btnContainer {
 }
 
 p.question {
+	text-align: center;
 	font-size: 20px;
 	color: #e0e1dd;
 	font-family: "Bebas Neue", sans-serif;
@@ -134,6 +134,11 @@ input#itemAmount {
 	background: #cad2c5;
 	padding: 8px;
 	border-radius: 8px;
+}
+
+.list li .itemAmount {
+	margin-left: auto; 
+	margin-right: 24px;
 }
 
 div.footer {
